--- a/examples/messenger/group/Makefile
+++ b/examples/messenger/group/Makefile
@@ -1,5 +1,5 @@
 ROOPATH=./../../..
-.PHONY: default copy run clean stop
+.PHONY: default copy run clean stop request-node1 request-node2 request-node3
 default: copy run 
 copy:
 	cp \
@@ -15,7 +15,14 @@ run:
 	docker-compose build
 	docker-compose up
 clean:
-	rm -f ./node1_hlm/hlk.yml ./node2_hlm/hlk.yml ./node3_hlm/hlk.yml
+	rm -f ./node1_hlm/hlk.key ./node2_hlm/hlk.key ./node3_hlm/hlk.key
 stop:
 	docker-compose down 
 	docker-compose rm -f
+
+request-node1:
+	./_request/node1.sh
+request-node2:
+	./_request/node2.sh
+request-node3:
+	./_request/node3.sh
