--- a/examples/messenger/routing/node2_hlm/hlk.yml
+++ b/examples/messenger/routing/node2_hlm/hlk.yml
@@ -9,10 +9,9 @@ logging:
 - warn
 - erro
 address:
-  external: :7571
+  external: 127.0.0.1:7571
   internal: :7572
 services:
-  hls-pinger: 127.0.0.1:7552
   hls-messenger: 127.0.0.1:7071
 endpoints:
 - 127.0.0.1:7522
