--- a/examples/messenger/routing/node2_hlm/hls-messenger.yml
+++ b/examples/messenger/routing/node2_hlm/hls-messenger.yml
@@ -7,5 +7,5 @@ logging:
 - erro
 address:
   internal: :7070
-  external: :7071
-connection: node2_hlc:7572
+  external: 127.0.0.1:7071
+connection: 127.0.0.1:7572
